syntax = "proto3";

package c1.connector.v2;

import "c1/connector/v2/resource.proto";
import "google/protobuf/any.proto";
import "buf/validate/validate.proto";

option go_package = "github.com/conductorone/baton-sdk/pb/c1/connector/v2";

service EntitlementsService {
  rpc ListEntitlements(EntitlementsServiceListEntitlementsRequest) returns (EntitlementsServiceListEntitlementsResponse);
}

message Entitlement {
  enum PurposeValue {
    PURPOSE_VALUE_UNSPECIFIED = 0;
    PURPOSE_VALUE_ASSIGNMENT = 1;
    PURPOSE_VALUE_PERMISSION = 2;
  }

  c1.connector.v2.Resource resource = 1 [(buf.validate.field) = {required: true}];
  string id = 2 [(buf.validate.field).string = {
    min_bytes: 1
    max_bytes: 1024
  }];
  string display_name = 3 [(buf.validate.field).string = {
    min_bytes: 1
    max_bytes: 1024
  }, (buf.validate.field).ignore = IGNORE_IF_ZERO_VALUE];
  string description = 4 [(buf.validate.field).string = {
    min_bytes: 1
    max_bytes: 2048
  }, (buf.validate.field).ignore = IGNORE_IF_ZERO_VALUE];
  repeated c1.connector.v2.ResourceType grantable_to = 5;
  repeated google.protobuf.Any annotations = 6;
  PurposeValue purpose = 7 [(buf.validate.field).enum = {defined_only: true}];
  string slug = 8;
}

message EntitlementsServiceListEntitlementsRequest {
  c1.connector.v2.Resource resource = 1;
  uint32 page_size = 2 [(buf.validate.field).uint32 = {
    lte: 250
  }, (buf.validate.field).ignore = IGNORE_IF_ZERO_VALUE];
  string page_token = 3 [(buf.validate.field).string = {
    min_bytes: 1
    max_bytes: 1048576
  }, (buf.validate.field).ignore = IGNORE_IF_ZERO_VALUE];
  repeated google.protobuf.Any annotations = 4;
  string active_sync_id = 5 [(buf.validate.field).string = {
    min_bytes: 1
    max_bytes: 1024
  }, (buf.validate.field).ignore = IGNORE_IF_ZERO_VALUE];
}

message EntitlementsServiceListEntitlementsResponse {
  repeated Entitlement list = 1;
  string next_page_token = 2 [(buf.validate.field).string = {
    min_bytes: 1
    max_bytes: 1048576
  }, (buf.validate.field).ignore = IGNORE_IF_ZERO_VALUE];
  repeated google.protobuf.Any annotations = 3;
}
